--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body class="bg-bg-primary text-white font-montserrat">
     <header class="bg-bg-secondary fixed top-0 left-0 right-0 z-1">
       <div class="custom-container py-[15px] flex justify-between items-center">
-        <div class="flex items-end gap-2.5">
-          <svg class="h-10 w-10 text-white">
+        <a href="/" class="flex items-end gap-2.5">
+          <svg class="h-10 w-10 fill-current">
             <use href="/sprite.svg#wave" />
           </svg>
           <span class="font-josefin text-4xl/[1]">draganov</span>
-        </div>
+        </a>
         <nav>
           <ul class="flex gap-25px text-additional">
             <li>
@@ -49,7 +49,9 @@
                 Draganov
                 <span class="text-2xl text-accent">SoundEngineering</span>
               </h1>
-              <p class="">Профессиональный звук для музыки, кино и рекламы</p>
+              <p class="font-medium">
+                Профессиональный звук для музыки, кино и рекламы
+              </p>
             </div>
             <a href="#" class="btn flex items-center gap-2.5 w-fit">
               Послушать
@@ -59,7 +61,7 @@
             </a>
           </div>
           <svg
-            class="fill-additional w-12.5 h-12.5 absolute bottom-10 right-1/2 translate-x-1/2 opacity-50"
+            class="fill-additional h-12.5 aspect-square absolute bottom-10 right-1/2 translate-x-1/2 opacity-50"
           >
             <use href="/sprite.svg#scroll" />
           </svg>
@@ -99,7 +101,7 @@
       </section>
       <section>
         <div class="custom-container py-12.5">
-          <div class="flex justify-between">
+          <div class="flex justify-between mb-25px items-end">
             <h2 class="text-2xl text-accent font-semibold">
               Популярные услуги
             </h2>
@@ -110,44 +112,139 @@
               </svg>
             </a>
           </div>
-          <div>
-            <div>
-              <div>
-                <h3>Создание инструментала / аранжировка</h3>
-                <svg class="text-white fill-current">
+          <div class="flex gap-25px flex-wrap">
+            <div
+              class="flex-1 flex flex-col gap-[15px] bg-bg-secondary rounded-[35px] p-25px"
+            >
+              <div class="flex gap-[15px]">
+                <h3 class="flex-1 text-2xl font-semibold">
+                  Создание инструментала / аранжировка
+                </h3>
+                <svg class="fill-white h-7.5 aspect-square">
                   <use href="/sprite.svg#drum" />
                 </svg>
               </div>
-              <p>
+              <p class="">
                 Разрабатываю оригинальные минусовки и аранжировки в нужном стиле
                 — от pop и R’n’B до trap, jazz или кинотемы. Подстраиваюсь под
                 голос, жанр и настроение трека.
               </p>
-              <button>
+              <button class="font-semibold flex gap-2.5 items-center">
                 Подробнее
-                <svg>
-                  <use class="arrow" href="/sprite.svg#arrow" />
+                <svg class="arrow fill-white">
+                  <use href="/sprite.svg#arrow" />
                 </svg>
               </button>
-              <span>От 7000 &#x20bd;</span>
-              <div>
-                <span>3-7 дней</span>
-                <button>Обсудить проект</button>
+              <span class="text-[32px] font-medium text-right">
+                От 7000 &#x20bd;
+              </span>
+              <div class="flex justify-between items-center">
+                <span class="text-additional font-medium">3-7 дней</span>
+                <button class="btn">Обсудить проект</button>
+              </div>
+            </div>
+            <div
+              class="flex-1 flex flex-col gap-[15px] bg-bg-secondary rounded-[35px] p-25px"
+            >
+              <div class="flex gap-[15px]">
+                <h3 class="flex-1 text-2xl font-semibold">
+                  Создание инструментала / аранжировка
+                </h3>
+                <svg class="fill-white h-7.5 aspect-square">
+                  <use href="/sprite.svg#drum" />
+                </svg>
+              </div>
+              <p class="">
+                Разрабатываю оригинальные минусовки и аранжировки в нужном стиле
+                — от pop и R’n’B до trap, jazz или кинотемы. Подстраиваюсь под
+                голос, жанр и настроение трека.
+              </p>
+              <button class="font-semibold flex gap-2.5 items-center">
+                Подробнее
+                <svg class="arrow fill-white">
+                  <use href="/sprite.svg#arrow" />
+                </svg>
+              </button>
+              <span class="text-[32px] font-medium text-right">
+                От 7000 &#x20bd;
+              </span>
+              <div class="flex justify-between items-center">
+                <span class="text-additional font-medium">3-7 дней</span>
+                <button class="btn">Обсудить проект</button>
+              </div>
+            </div>
+            <div
+              class="flex-1 flex flex-col gap-[15px] bg-bg-secondary rounded-[35px] p-25px"
+            >
+              <div class="flex gap-[15px]">
+                <h3 class="flex-1 text-2xl font-semibold">
+                  Создание инструментала / аранжировка
+                </h3>
+                <svg class="fill-white h-7.5 aspect-square">
+                  <use href="/sprite.svg#drum" />
+                </svg>
+              </div>
+              <p class="">
+                Разрабатываю оригинальные минусовки и аранжировки в нужном стиле
+                — от pop и R’n’B до trap, jazz или кинотемы. Подстраиваюсь под
+                голос, жанр и настроение трека.
+              </p>
+              <button class="font-semibold flex gap-2.5 items-center">
+                Подробнее
+                <svg class="arrow fill-white">
+                  <use href="/sprite.svg#arrow" />
+                </svg>
+              </button>
+              <span class="text-[32px] font-medium text-right">
+                От 7000 &#x20bd;
+              </span>
+              <div class="flex justify-between items-center">
+                <span class="text-additional font-medium">3-7 дней</span>
+                <button class="btn">Обсудить проект</button>
               </div>
             </div>
           </div>
         </div>
       </section>
       <section>
-        <div class="custom-container">
-          <h2>Преимущества</h2>
-          <div>
-            <div>
-              <div>
-                <svg>
+        <div class="custom-container py-25">
+          <h2 class="text-2xl text-accent font-semibold text-center mb-25px">
+            Преимущества
+          </h2>
+          <div class="flex gap-25px flex-wrap">
+            <div class="flex-[1_1_240px]">
+              <div class="flex gap-[15px] items-center mb-[15px]">
+                <svg class="fill-white aspect-square h-6">
                   <use href="/sprite.svg#fader" />
                 </svg>
-                <h3>Полный спектр звука</h3>
+                <h3 class="font-semibold">Полный спектр звука</h3>
+              </div>
+              <p>От аранжировки и сведения до постпродакшна и саунд-дизайна.</p>
+            </div>
+            <div class="flex-[1_1_240px]">
+              <div class="flex gap-[15px] items-center mb-[15px]">
+                <svg class="fill-white aspect-square h-6">
+                  <use href="/sprite.svg#fader" />
+                </svg>
+                <h3 class="font-semibold">Полный спектр звука</h3>
+              </div>
+              <p>От аранжировки и сведения до постпродакшна и саунд-дизайна.</p>
+            </div>
+            <div class="flex-[1_1_240px]">
+              <div class="flex gap-[15px] items-center mb-[15px]">
+                <svg class="fill-white aspect-square h-6">
+                  <use href="/sprite.svg#fader" />
+                </svg>
+                <h3 class="font-semibold">Полный спектр звука</h3>
+              </div>
+              <p>От аранжировки и сведения до постпродакшна и саунд-дизайна.</p>
+            </div>
+            <div class="flex-[1_1_240px]">
+              <div class="flex gap-[15px] items-center mb-[15px]">
+                <svg class="fill-white aspect-square h-6">
+                  <use href="/sprite.svg#fader" />
+                </svg>
+                <h3 class="font-semibold">Полный спектр звука</h3>
               </div>
               <p>От аранжировки и сведения до постпродакшна и саунд-дизайна.</p>
             </div>
@@ -155,40 +252,105 @@
         </div>
       </section>
       <section>
-        <div class="custom-container">
-          <div>
-            <h2>Портфолио</h2>
-            <a href="#">
+        <div class="custom-container py-12.5">
+          <div class="flex justify-between items-end mb-25px">
+            <h2 class="text-2xl font-semibold text-accent">Портфолио</h2>
+            <a class="link" href="#">
               Все работы
-              <svg class="arrow">
+              <svg class="arrow -rotate-90">
                 <use href="/sprite.svg#arrow" />
               </svg>
             </a>
           </div>
-          <div>
-            <div>
-              <div>
+          <div class="grid grid-cols-4 gap-25px">
+            <div class="text-center">
+              <div
+                class="w-full aspect-square bg-[url('./src/assets/images/cover1.jpeg')] bg-cover bg-center]"
+              >
                 <!-- music player -->
               </div>
-              <h3>Название</h3>
+              <h3 class="my-2.5">Название</h3>
+            </div>
+            <div class="text-center">
+              <div
+                class="w-full aspect-square bg-[url('./src/assets/images/cover1.jpeg')] bg-cover bg-center]"
+              >
+                <!-- music player -->
+              </div>
+              <h3 class="my-2.5">Название</h3>
+            </div>
+            <div class="text-center">
+              <div
+                class="w-full aspect-square bg-[url('./src/assets/images/cover1.jpeg')] bg-cover bg-center]"
+              >
+                <!-- music player -->
+              </div>
+              <h3 class="my-2.5">Название</h3>
+            </div>
+            <div class="text-center">
+              <div
+                class="w-full aspect-square bg-[url('./src/assets/images/cover1.jpeg')] bg-cover bg-center]"
+              >
+                <!-- music player -->
+              </div>
+              <h3 class="my-2.5">Название</h3>
             </div>
           </div>
         </div>
       </section>
       <section>
-        <div class="custom-container">
-          <h2>Отзывы</h2>
-          <div>
-            <img src="./src/assets/images/disc.jpeg" alt="" />
-            <div>
-              <div>
-                <img src="./src/assets/images/cover1.jpeg" alt="" />
+        <div class="custom-container flex flex-col gap-25px items-center py-25">
+          <h2 class="text-2xl font-semibold text-accent">Отзывы</h2>
+          <div class="flex gap-25px items-end flex-wrap-reverse">
+            <img
+              class="aspect-square max-w-[470px] min-w-3/7 flex-1 rounded-[20px] object-cover"
+              src="./src/assets/images/disc.jpeg"
+              alt=""
+            />
+            <div class="flex-[1_1_400px] flex flex-col gap-25px">
+              <div class="flex gap-25px">
+                <img
+                  class="rounded-full h-12.5 aspect-square"
+                  src="./src/assets/images/cover1.jpeg"
+                  alt=""
+                />
                 <div>
-                  <h3>Василий</h3>
-                  <p>
+                  <h3 class="font-semibold mb-2.5">Василий</h3>
+                  <p class="mb-[15px]">
                     Отличная работа! Звук чистый, баланс идеальный, работать
                     было очень комфортно.
                   </p>
+                  <button class="btn">Послушать</button>
+                </div>
+              </div>
+              <div class="flex gap-25px">
+                <img
+                  class="rounded-full h-12.5 aspect-square"
+                  src="./src/assets/images/cover1.jpeg"
+                  alt=""
+                />
+                <div>
+                  <h3 class="font-semibold mb-2.5">Василий</h3>
+                  <p class="mb-[15px]">
+                    Отличная работа! Звук чистый, баланс идеальный, работать
+                    было очень комфортно.
+                  </p>
+                  <button class="btn">Послушать</button>
+                </div>
+              </div>
+              <div class="flex gap-25px">
+                <img
+                  class="rounded-full h-12.5 aspect-square"
+                  src="./src/assets/images/cover1.jpeg"
+                  alt=""
+                />
+                <div>
+                  <h3 class="font-semibold mb-2.5">Василий</h3>
+                  <p class="mb-[15px]">
+                    Отличная работа! Звук чистый, баланс идеальный, работать
+                    было очень комфортно.
+                  </p>
+                  <button class="btn">Послушать</button>
                 </div>
               </div>
             </div>
@@ -196,12 +358,15 @@
         </div>
       </section>
       <section>
-        <div class="custom-container">
-          <h2>Оставить заявку</h2>
-          <form>
+        <div
+          class="custom-container pt-12.5 pb-25 flex flex-col gap-25px items-center"
+        >
+          <h2 class="text-2xl font-semibold text-accent">Оставить заявку</h2>
+          <form class="flex flex-col gap-[15px] w-[410px]">
             <label>
               Ваше имя
               <input
+                class="w-full mt-2.5 bg-bg-secondary rounded-[10px] px-[15px] py-2.5"
                 type="text"
                 name="name"
                 placeholder="Как к вам обращаться?"
@@ -210,6 +375,7 @@
             <label>
               Email
               <input
+                class="w-full mt-2.5 bg-bg-secondary rounded-[10px] px-[15px] py-2.5"
                 type="email"
                 name="email"
                 placeholder="Ваш email для ответа"
@@ -218,20 +384,22 @@
             <label>
               Сообщение
               <textarea
+                class="w-full resize-none mt-2.5 bg-bg-secondary rounded-[10px] px-[15px] py-2.5"
                 name="message"
+                rows="6"
                 placeholder="Опишите задачу или задайте вопрос"
               ></textarea>
             </label>
-            <button>Отправить</button>
+            <button class="btn w-fit">Отправить</button>
           </form>
         </div>
       </section>
     </main>
-    <footer>
-      <div class="custom-container">
-        <div>
-          <h2>Контакты</h2>
-          <ul>
+    <footer class="bg-bg-secondary">
+      <div class="custom-container py-7.5 flex justify-between items-center">
+        <div class="flex gap-25px items-center">
+          <h2 class="text-2xl text-additional">Контакты</h2>
+          <ul class="flex flex-col gap-2.5">
             <li>
               <a href="mailto:draganovd@gmail.com">draganovd@gmail.com</a>
             </li>
@@ -239,25 +407,33 @@
               <a href="tel:+79234243223">+79234243223</a>
             </li>
             <li>
-              <ul>
+              <ul class="flex gap-2.5">
                 <li>
                   <a href="#">
-                    <svg>
+                    <svg class="fill-additional w-25px aspect-square">
                       <use href="/sprite.svg#telegram" />
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <svg>
+                    <svg class="fill-additional w-25px aspect-square">
                       <use href="/sprite.svg#tiktok" />
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <svg>
-                      <use href="/sprite.svg#youtube" />
+                    <svg
+                      class="fill-additional w-25px aspect-square"
+                      viewBox="0 0 24 24"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M12 4C12.855 4 13.732 4.022 14.582 4.058L15.586 4.106L16.547 4.163L17.447 4.224L18.269 4.288C19.1612 4.35589 20.0008 4.73643 20.64 5.3626C21.2791 5.98877 21.6768 6.8204 21.763 7.711L21.803 8.136L21.878 9.046C21.948 9.989 22 11.017 22 12C22 12.983 21.948 14.011 21.878 14.954L21.803 15.864L21.763 16.289C21.6768 17.1798 21.2789 18.0115 20.6396 18.6377C20.0002 19.2639 19.1604 19.6443 18.268 19.712L17.448 19.775L16.548 19.837L15.586 19.894L14.582 19.942C13.7218 19.9793 12.861 19.9986 12 20C11.139 19.9986 10.2782 19.9793 9.418 19.942L8.414 19.894L7.453 19.837L6.553 19.775L5.731 19.712C4.83881 19.6441 3.9992 19.2636 3.36004 18.6374C2.72089 18.0112 2.32319 17.1796 2.237 16.289L2.197 15.864L2.122 14.954C2.04583 13.9711 2.00514 12.9858 2 12C2 11.017 2.052 9.989 2.122 9.046L2.197 8.136L2.237 7.711C2.32316 6.82055 2.72071 5.98905 3.35966 5.36291C3.99861 4.73676 4.83799 4.35612 5.73 4.288L6.551 4.224L7.451 4.163L8.413 4.106L9.417 4.058C10.2775 4.02073 11.1387 4.00139 12 4ZM10 9.575V14.425C10 14.887 10.5 15.175 10.9 14.945L15.1 12.52C15.1914 12.4674 15.2673 12.3916 15.3201 12.3003C15.3729 12.209 15.4007 12.1055 15.4007 12C15.4007 11.8945 15.3729 11.791 15.3201 11.6997C15.2673 11.6084 15.1914 11.5326 15.1 11.48L10.9 9.056C10.8088 9.00332 10.7053 8.9756 10.5999 8.97562C10.4945 8.97563 10.3911 9.00339 10.2998 9.0561C10.2086 9.1088 10.1329 9.1846 10.0802 9.27587C10.0276 9.36713 9.99993 9.47065 10 9.576V9.575Z"
+                      />
                     </svg>
                   </a>
                 </li>
@@ -265,11 +441,11 @@
             </li>
           </ul>
         </div>
-        <div>
-          <svg>
+        <div class="flex items-end gap-2.5">
+          <svg class="h-10 w-10 fill-current">
             <use href="/sprite.svg#wave" />
           </svg>
-          <span>draganov</span>
+          <span class="font-josefin text-4xl/[1]">draganov</span>
         </div>
       </div>
     </footer>
