added new pages and service template

--- a/index.html
+++ b/index.html
@@ -18,16 +18,19 @@
         <nav>
           <ul class="flex gap-25px text-additional">
             <li>
-              <a href="#">Обо мне</a>
+              <a href="about.html">Обо мне</a>
             </li>
             <li>
-              <a href="#">Услуги</a>
+              <a href="services.html">Услуги</a>
             </li>
             <li>
-              <a href="#">Портфолио</a>
+              <a href="portfolio.html">Портфолио</a>
             </li>
             <li>
-              <a href="#">Отзывы</a>
+              <a href="reviews.html">Отзывы</a>
+            </li>
+            <li>
+              <a href="contacts.html">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -36,7 +39,7 @@
     <main>
       <section class="relative">
         <div
-          class="absolute inset-x-0 top-17.5 bottom-0 bg-[url('./src/assets/images/hero.png')] bg-position-[75%_center] bg-cover"
+          class="absolute inset-x-0 top-17.5 bottom-0 bg-(image:--img-hero) bg-position-[75%_center] bg-cover"
         >
           <div
             class="size-full bg-radial-[circle_at_85%_50%] from-transparent to-55% to-black opacity-40"
@@ -53,7 +56,7 @@
                 Профессиональный звук для музыки, кино и рекламы
               </p>
             </div>
-            <a href="#" class="btn flex items-center gap-2.5 w-fit">
+            <a href="#portfolio" class="btn flex items-center gap-2.5 w-fit">
               Послушать
               <svg class="arrow">
                 <use href="/sprite.svg#arrow" />
@@ -91,7 +94,7 @@
             erat leo, dictum efficitur gravida non, dignissim eget ex.Lorem
             ipsum dolor sit amet, consectetur adipiscing elit.
           </p>
-          <a href="#" class="link">
+          <a href="/about.html" class="link">
             Подробнее
             <svg class="arrow -rotate-90">
               <use href="/sprite.svg#arrow" />
@@ -105,105 +108,14 @@
             <h2 class="text-2xl text-accent font-semibold">
               Популярные услуги
             </h2>
-            <a class="link" href="#">
+            <a class="link" href="/services.html">
               Все услуги
               <svg class="arrow -rotate-90">
                 <use href="/sprite.svg#arrow" />
               </svg>
             </a>
           </div>
-          <div class="flex gap-25px flex-wrap">
-            <div
-              class="flex-1 flex flex-col gap-[15px] bg-bg-secondary rounded-[35px] p-25px"
-            >
-              <div class="flex gap-[15px]">
-                <h3 class="flex-1 text-2xl font-semibold">
-                  Создание инструментала / аранжировка
-                </h3>
-                <svg class="fill-white h-7.5 aspect-square">
-                  <use href="/sprite.svg#drum" />
-                </svg>
-              </div>
-              <p class="">
-                Разрабатываю оригинальные минусовки и аранжировки в нужном стиле
-                — от pop и R’n’B до trap, jazz или кинотемы. Подстраиваюсь под
-                голос, жанр и настроение трека.
-              </p>
-              <button class="font-semibold flex gap-2.5 items-center">
-                Подробнее
-                <svg class="arrow fill-white">
-                  <use href="/sprite.svg#arrow" />
-                </svg>
-              </button>
-              <span class="text-[32px] font-medium text-right">
-                От 7000 &#x20bd;
-              </span>
-              <div class="flex justify-between items-center">
-                <span class="text-additional font-medium">3-7 дней</span>
-                <button class="btn">Обсудить проект</button>
-              </div>
-            </div>
-            <div
-              class="flex-1 flex flex-col gap-[15px] bg-bg-secondary rounded-[35px] p-25px"
-            >
-              <div class="flex gap-[15px]">
-                <h3 class="flex-1 text-2xl font-semibold">
-                  Создание инструментала / аранжировка
-                </h3>
-                <svg class="fill-white h-7.5 aspect-square">
-                  <use href="/sprite.svg#drum" />
-                </svg>
-              </div>
-              <p class="">
-                Разрабатываю оригинальные минусовки и аранжировки в нужном стиле
-                — от pop и R’n’B до trap, jazz или кинотемы. Подстраиваюсь под
-                голос, жанр и настроение трека.
-              </p>
-              <button class="font-semibold flex gap-2.5 items-center">
-                Подробнее
-                <svg class="arrow fill-white">
-                  <use href="/sprite.svg#arrow" />
-                </svg>
-              </button>
-              <span class="text-[32px] font-medium text-right">
-                От 7000 &#x20bd;
-              </span>
-              <div class="flex justify-between items-center">
-                <span class="text-additional font-medium">3-7 дней</span>
-                <button class="btn">Обсудить проект</button>
-              </div>
-            </div>
-            <div
-              class="flex-1 flex flex-col gap-[15px] bg-bg-secondary rounded-[35px] p-25px"
-            >
-              <div class="flex gap-[15px]">
-                <h3 class="flex-1 text-2xl font-semibold">
-                  Создание инструментала / аранжировка
-                </h3>
-                <svg class="fill-white h-7.5 aspect-square">
-                  <use href="/sprite.svg#drum" />
-                </svg>
-              </div>
-              <p class="">
-                Разрабатываю оригинальные минусовки и аранжировки в нужном стиле
-                — от pop и R’n’B до trap, jazz или кинотемы. Подстраиваюсь под
-                голос, жанр и настроение трека.
-              </p>
-              <button class="font-semibold flex gap-2.5 items-center">
-                Подробнее
-                <svg class="arrow fill-white">
-                  <use href="/sprite.svg#arrow" />
-                </svg>
-              </button>
-              <span class="text-[32px] font-medium text-right">
-                От 7000 &#x20bd;
-              </span>
-              <div class="flex justify-between items-center">
-                <span class="text-additional font-medium">3-7 дней</span>
-                <button class="btn">Обсудить проект</button>
-              </div>
-            </div>
-          </div>
+          <div class="flex gap-25px flex-wrap" data-services-container></div>
         </div>
       </section>
       <section>
@@ -251,11 +163,11 @@
           </div>
         </div>
       </section>
-      <section>
+      <section id="portfolio" class="scroll-m-17.5">
         <div class="custom-container py-12.5">
           <div class="flex justify-between items-end mb-25px">
             <h2 class="text-2xl font-semibold text-accent">Портфолио</h2>
-            <a class="link" href="#">
+            <a class="link" href="/portfolio.html">
               Все работы
               <svg class="arrow -rotate-90">
                 <use href="/sprite.svg#arrow" />
@@ -265,31 +177,7 @@
           <div class="grid grid-cols-4 gap-25px">
             <div class="text-center">
               <div
-                class="w-full aspect-square bg-[url('./src/assets/images/cover1.jpeg')] bg-cover bg-center]"
-              >
-                <!-- music player -->
-              </div>
-              <h3 class="my-2.5">Название</h3>
-            </div>
-            <div class="text-center">
-              <div
-                class="w-full aspect-square bg-[url('./src/assets/images/cover1.jpeg')] bg-cover bg-center]"
-              >
-                <!-- music player -->
-              </div>
-              <h3 class="my-2.5">Название</h3>
-            </div>
-            <div class="text-center">
-              <div
-                class="w-full aspect-square bg-[url('./src/assets/images/cover1.jpeg')] bg-cover bg-center]"
-              >
-                <!-- music player -->
-              </div>
-              <h3 class="my-2.5">Название</h3>
-            </div>
-            <div class="text-center">
-              <div
-                class="w-full aspect-square bg-[url('./src/assets/images/cover1.jpeg')] bg-cover bg-center]"
+                class="w-full aspect-square bg-(image:--img-cover1) bg-cover bg-center]"
               >
                 <!-- music player -->
               </div>
@@ -304,14 +192,14 @@
           <div class="flex gap-25px items-end flex-wrap-reverse">
             <img
               class="aspect-square max-w-[470px] min-w-3/7 flex-1 rounded-[20px] object-cover"
-              src="./src/assets/images/disc.jpeg"
+              src="/disk.jpeg"
               alt=""
             />
             <div class="flex-[1_1_400px] flex flex-col gap-25px">
               <div class="flex gap-25px">
                 <img
                   class="rounded-full h-12.5 aspect-square"
-                  src="./src/assets/images/cover1.jpeg"
+                  src="/src/assets/images/cover1.jpeg"
                   alt=""
                 />
                 <div>
@@ -326,7 +214,7 @@
               <div class="flex gap-25px">
                 <img
                   class="rounded-full h-12.5 aspect-square"
-                  src="./src/assets/images/cover1.jpeg"
+                  src="/src/assets/images/cover1.jpeg"
                   alt=""
                 />
                 <div>
@@ -341,7 +229,7 @@
               <div class="flex gap-25px">
                 <img
                   class="rounded-full h-12.5 aspect-square"
-                  src="./src/assets/images/cover1.jpeg"
+                  src="/src/assets/images/cover1.jpeg"
                   alt=""
                 />
                 <div>
